Make sure the saved-as url is correctly selected.

BUG: 236577

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1196246